change heading huu-ich 2

--- a/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
+++ b/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bảo hiểm nhân thọ liên kết chung (Trang web LHBội)</title>
+<title>Bảo hiểm nhân thọ liên kết chung</title>
 <meta name="description" content="Bảo hiểm nhân thọ liên kết chung: khách hàng có thể thay đổi mức phí, thời gian đóng phí…" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, bảo hiểm, nhân thọ, liên kết chung">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Bảo hiểm nhân thọ liên kết chung</div>
-<div class="right">Viết lần đầu trong Tháng Mười Một, 2013.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +230,8 @@ https://lehboi.github.io/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung
     </amp-facebook-like>
   </div>
 
+  <h1>Bảo hiểm nhân thọ liên kết chung</h1>
+  <div class="right">Viết lần đầu trong Tháng Mười Một, 2013.</div>
   <p><i>Bảo hiểm nhân thọ liên kết chung</i> đã <span class="tmark">giải toả</span> những lo ngại khi tham gia bảo hiểm nhân thọ như:</p>
   <ul>
     <li>lạm phát,</li>
