--- a/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu.html
+++ b/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Điểm Tựa Đầu Tư (Trang web LHBội)</title>
+<title>Điểm Tựa Đầu Tư</title>
 <meta name="description" content="Điểm Tựa Đầu Tư: bảo hiểm nhân thọ nhiều quyền lợi và sinh lời cao trong dài hạn" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, bảo hiểm, nhân thọ, liên kết, đầu tư">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Điểm Tựa Đầu Tư<br>Loại két sắt biết ấp cho tiền nở nhanh</div>
-  <div class="right">Viết lần đầu trong Tháng Mười, 2017.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,7 +230,10 @@ https://lehboi.github.io/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu
     </amp-facebook-like>
   </div>
 
-  <h1>Những nơi cất tiền</h1>
+  <h1>Điểm Tựa Đầu Tư</h1>
+  <div class="title">Loại két sắt biết ấp cho tiền nở nhanh</div>
+  <div class="right">Viết lần đầu trong Tháng Mười, 2017.</div>
+  <h2>Những nơi cất tiền</h2>
   <div class="flright"><amp-img alt="Manulife Điểm Tựa Đầu Tư" src="/images/DTDT.svg" width="400" height="300" layout="responsive"></amp-img></a>
   </div>
   <p>Trong xã hội ngày nay, muốn sống được thì phải có tiền. Vì vậy mọi người có sức lao động đều phải làm việc để kiếm tiền, và còn phải giữ tiền để có cái mà tiêu trong tương lai như chuẩn bị cho con lập nghiệp hoặc cho chính mình khi hết sức lao động. Giữ tiền không đơn giản là cất trong tủ, khoá kỹ lại. Giữ tiền kiểu đó rất mệt, mệt vì sợ mất, mệt vì phải kiếm nhiều tiền bù vào lạm phát, mệt vì phải giữ quá nhiều.</p>
@@ -269,7 +265,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h1>Điểm Tựa Đầu Tư</h1>
+  <h2>Điểm Tựa Đầu Tư</h2>
   <p>Manulife đã thiết kế ra một sản phẩm bảo hiểm liên kết quỹ đầu tư mới: Điểm Tựa Đầu Tư. Điểm Tựa Đầu Tư đưa đến cho khách hàng một két sắt để giữ tiền an toàn, tiền không ngừng nở ra trong két sắt. Trong két sắt đó có sáu ngăn, mỗi ngăn làm cho tiền nở theo một cách khác nhau, và trong két sắt đó còn có một ngăn đặc biệt chỉ mở ra trong những <a href="phi-bao-hiem-nhan-tho">tình huống khó khăn</a>.</p>
   <p>Sáu ngăn của két sắt là:</p>
   <dl>
@@ -314,7 +310,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h2>Ngăn tiền đặc biệt</h2>
+  <h3>Ngăn tiền đặc biệt</h3>
   <p>Về ngăn đặc biệt, mỗi tháng khách hàng cất một số tiền rất nhỏ vào ngăn đặc biệt của két sắt Điểm Tựa Đầu Tư, ngăn đặc biệt đó thông với kho tiền chung của tất cả khách hàng. Khi khách hàng gặp tình huống khó khăn trong phạm vi cam kết, ngăn đặc biệt sẽ mở ra để khách hàng lấy một số tiền lên đến hàng chục ngàn lần số tiền đã cất vào mỗi tháng. Các tình huống khó khăn mà khách hàng cần mở ngăn đặc biệt gồm có:</p>
   <ul>
     <li>thanh toán viện phí nội trú, ngoại trú, nha khoa</li>
@@ -352,11 +348,11 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h1>Giải đáp</h1>
-  <h2>Ngăn Tăng Trưởng ấp cho tiền nở nhanh đến mức nào?</h2>
+  <h2>Giải đáp</h2>
+  <h3>Ngăn Tăng Trưởng ấp cho tiền nở nhanh đến mức nào?</h3>
   <p>Trong 5 năm vừa qua, quỹ Tăng Trưởng lời trung bình [an error occurred while processing this directive], từ 50 triệu đồng thu lại [an error occurred while processing this directive] triệu đồng.
 Trong cùng thời gian đó tiền tiết kiệm ở ngân hàng Vietcombank lời trung bình 6,50%/năm, từ 50 triệu đồng thu lại 68,564 triệu đồng. Với tốc độ chênh lệch đó, sau 30 năm, một món tiền để vào két sắt Điểm Tựa Đầu Tư sẽ lớn gấp 7,838 lần món tiền để vào ngân hàng. Thông tin chi tiết trong trang <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">so sánh giữa sổ tiết kiệm và quỹ đầu tư</a>.</p>
-  <h2>‘Mua’ két sắt Điểm Tựa Đầu Tư có đắt không?</h2>
+  <h3>‘Mua’ két sắt Điểm Tựa Đầu Tư có đắt không?</h3>
   <p>Két sắt Điểm Tựa Đầu Tư tốt như vậy nhưng giá mua không hề đắt. Chỉ cần từ 585 ngàn đồng mỗi tháng, khách hàng có thể mua được một két sắt Điểm Tựa Đầu Tư cất được 77 triệu đồng mỗi năm. Mỗi năm cất vào đó 77 triệu đồng, sau 30 năm khách hàng đã có 35 tỉ đồng trong két sắt, một kho tiền không hề nhỏ. Khách hàng không phải bỏ ra ngay một cục để mua két sắt mà trả góp trong 3 năm, và có một điều rất lạ là số tiền mua két sắt đó được trả trở lại vào két sắt nếu khách hàng dùng két sắt đủ lâu, càng lâu thì càng được trả lại nhiều hơn. Nếu khách hàng không cất đủ 77 triệu đồng mỗi năm cũng không sao, cất nhiều thì nở ra nhiều, cất ít thì nở ra ít. Thông thường thì người trẻ tuổi bắt đầu cất ít tiền, càng về sau càng tăng dần số tiền cất vào.</p>
   <p>Không chỉ số tiền mua két sắt được trả lại dần theo thời gian, mỗi lần cất tiền vào két bạn còn được thưởng ngay 5% số tiền nếu bạn dùng thẻ tín dụng Visa Cashback của Citibank hoặc thẻ tín dụng MasterCard StepUp của VPBank (qua trang web <a href='http://hopdongcuatoi.manulife.com.vn' target='_blank'>ManuConnect</a> hoặc tại quầy giao dịch của Manulife). Việc này tương đương với việc bạn được nhận ngay 5% lợi nhuận, rồi được nhận tiếp lợi nhuận theo thời gian tiền nằm trong két.</p>
 <!-- AMP In-article 1 -->
@@ -385,9 +381,9 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h2>Dùng két sắt Điểm Tựa Đầu Tư có dễ không?</h2>
+  <h3>Dùng két sắt Điểm Tựa Đầu Tư có dễ không?</h3>
   <p>Rất dễ! Bạn chỉ ký vài chữ ký, sau đó yêu cầu ngân hàng của bạn tự động chuyển số tiền bạn muốn cất hàng tháng. Thế là xong! Thỉnh thoảng chuyên viên tư vấn sẽ liên lạc với bạn để thông tin về tình hình thị trường và đề nghị bạn chuyển tiền giữa các ngăn trong két sắt, nếu bạn đồng ý thì chuyên viên tư vấn đưa đến cho bạn ký giấy yêu cầu chuyển tiền.</p>
-  <h2>Bạn sợ rằng lạm phát làm mất giá đồng tiền trong két sắt?</h2>
+  <h3>Bạn sợ rằng lạm phát làm mất giá đồng tiền trong két sắt?</h3>
   <p>Lạm phát là một điều tất yếu không thể tránh được. Không thể tránh được nhưng người ta có thể khắc phục được ảnh hưởng có hại của nó bằng cách làm cho tiền nở nhanh hơn tốc độ lạm phát. Lạm phát trung bình trong các năm gần đây chỉ trong khoảng 4%-5% còn tốc độ nở ra tới 18%, khách hàng vẫn còn lời hơn 10% mỗi năm.</p>
   <p>Có một loại lạm phát khác mà bạn cần quan tâm và bạn có thể khắc phục được, đó là <a href="../lam-phat-loi-song">lạm phát lối sống</a>. Việc <a href="../ke-hoach-tai-chinh/">lập lộ trình tài chính</a> có thể giúp bạn khắc phục lạm phát lối sống.</p>
 
