--- a/huu-ich/cac-loai-bao-hiem/index.html
+++ b/huu-ich/cac-loai-bao-hiem/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Các loại bảo hiểm (Trang web LHBội)</title>
+<title>Các loại bảo hiểm</title>
 <meta name="description" content="Mục đích của bảo hiểm. Các loại bảo hiểm. Mỗi người nên tự trang bị bảo hiểm cho gia đình." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, bảo hiểm, bệnh, tai nạn, nhân thọ">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cac-loai-bao-hiem/">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Các loại bảo hiểm</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/huu-ich/cac-loai-bao-hiem/
     </amp-facebook-like>
   </div>
 
+  <h1>Các loại bảo hiểm</h1>
   <p>Có lẽ bạn đã từng nghe nói về các loại bảo hiểm sau:</p>
   <dl>
     <dt>BH y tế</dt>
@@ -278,7 +273,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h1>Rủi ro</h1>
+  <h2>Rủi ro</h2>
   <p><span class="tmark">"Rủi ro là sự không chắc chắn có thể đo lường được."</span>
   <br><span class="tmark">'Không chắc chắn'</span> nghĩa là không thể biết trước việc đó xảy ra khi nào và ở đâu.
   <br><span class="tmark">'Có thể đo lường được'</span> nghĩa là biết được tần suất việc đó xảy ra, khi việc đó xảy ra thì thiệt hại bao nhiêu.
@@ -322,7 +317,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h1>Ý nghĩa của bảo hiểm</h1>
+  <h2>Ý nghĩa của bảo hiểm</h2>
   <p>Về hình thức thì bảo hiểm là một thứ phí giống như phí giữ xe vậy. Ai sợ mất xe thì phải trả phí giữ xe. Ai <b>sợ mất tiền</b> thì trả phí bảo hiểm. Khi bị mất xe thì ta chỉ nhận được bồi thường ít hơn hoặc bằng giá trị chiếc xe, còn bảo hiểm có thể đền số tiền ta đang có và cả số tiền ta chưa có (tức là số tiền sẽ làm ra trong tương lai).</p>
   <p>Khi tham gia bảo hiểm thì mình đóng một khoản phí để khi có rủi ro sẽ nhận được số tiền bảo hiểm. Khoản phí đó dùng để chia sẻ rủi ro giữa những người cùng tham gia bảo hiểm: người gặp rủi ro nhận tiền của những người chưa gặp rủi ro. Mua bảo hiểm mà không gặp rủi ro cũng giống như đem tiền đi làm <a href="/huu-ich/chi-tieu">từ thiện</a>: giúp những người không may.
   <br><a href="/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho">Tiền đóng bảo hiểm</a> cũng giống tiền mua vé số ở chỗ tiền của nhiều người góp lại đưa cho một số ít người. Nhưng bảo hiểm và xổ số khác nhau ở chỗ: người mua vé số muốn được nhận tiền thưởng, người tham gia bảo hiểm không mong nhận tiền bồi thường.
@@ -367,7 +362,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h2>Bảo hiểm cho người</h2>
+  <h3>Bảo hiểm cho người</h3>
   <p>Những <a href="/huu-ich/cau-chuyen/sinh-lao-benh-tu">rủi ro liên quan đến thân thể</a> con người mà làm thiệt hại tài chính gia đình là:</p>
   <ul>
     <li>bệnh tật,</li>
@@ -413,7 +408,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h3>Các loại bảo hiểm linh hoạt</h3>
+  <h4>Các loại bảo hiểm linh hoạt</h4>
   <p>Những sản phẩm bảo hiểm nhân thọ thiết kế theo kiểu truyền thống (kiểu cũ) thì <i>giá trị hoàn lại</i> gần bằng <i>số tiền bảo hiểm</i> làm cho người tham gia bảo hiểm bị <b>buộc</b> phải tiết kiệm tương đương với số tiền bảo hiểm rủi ro. Sản phẩm kiểu cũ cũng cố định về thời hạn hợp đồng, thời hạn đóng phí.
   <br>Về sau có những sản phẩm <a href="bhnt-lien-ket-chung">bảo hiểm nhân thọ liên kết chung</a>: <i><span class="tmark">linh hoạt</span></i> giữa hai mục đích bảo hiểm và tích luỹ, người tham gia bảo hiểm tự chọn số tiền bảo hiểm và giá trị hoàn lại khác nhau, tự quyết định thời hạn bảo hiểm, thời hạn đóng phí. Khách hàng có thể chọn số tiền bảo hiểm cao và giá trị hoàn lại thấp để đóng phí thấp, phần tiền tiết kiệm còn lại đem gửi vào chỗ nào có lãi suất cao và an toàn. Tất nhiên muốn được tối ưu như vậy thì khách hàng hoặc tư vấn viên tài chính phải thật hiểu về kế hoạch tài chính để chọn đúng kế hoạch <a href="../tich-luy">tích luỹ</a> và kế hoạch bảo hiểm sao cho <i>dù có rủi ro hay không thì gia đình vẫn có đủ số tiền vào lúc cần dùng đến</i>. Nghĩa là phải thực hiện song song hai kế hoạch để có cùng một kết quả như sản phẩm bảo hiểm truyền thống ở trên với số tiền bỏ ra ít hơn.
   <br>Với mục tiêu <a href="../tich-luy-dai-han">để dành tiền dài hạn</a> thì <b><a href="bhnt-lien-ket-chung">bảo hiểm liên kết chung</a> cho kết quả tốt hơn gửi ngân hàng</b>.
