--- a/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
+++ b/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Phí bảo hiểm nhân thọ (Trang web LHBội)</title>
+<title>Phí bảo hiểm nhân thọ</title>
 <meta name="description" content="Giải thích về nguyên tắc của phí bảo hiểm nhân thọ" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, bảo hiểm, nhân thọ, phí">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,14 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
   <div class="body">
-    <div class="title">Phí bảo hiểm nhân thọ</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -235,6 +230,7 @@ https://lehboi.github.io/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho
     </amp-facebook-like>
   </div>
 
+    <h1>Phí bảo hiểm nhân thọ</h1>
   <p>Tiền khách hàng đóng vào các hợp đồng bảo hiểm nhân thọ sẽ được chia làm ba phần riêng biệt theo tỉ lệ đã được tối ưu sau hàng trăm năm hoạt động. Ba phần đó là:</p>
   <ol>
     <li>hoàn lại cho khách hàng: dùng để trả cho khách hàng khi chấm dứt hợp đồng</li>
@@ -299,7 +295,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Bảo tức trong bảo hiểm nhân thọ kiểu <i>truyền thống</i></h4>
+  <h2>Bảo tức trong bảo hiểm nhân thọ kiểu <i>truyền thống</i></h2>
   <p>Tuỳ theo quy định của từng công ty bảo hiểm nhân thọ, khách hàng có thể lấy bảo tức và tiền lời trước khi đáo hạn hợp đồng.
   <br>Manulife chia bảo tức vào mỗi hợp đồng từ số tiền thực sự lời trong năm, tiền lời của bảo tức tích luỹ là tiền lời thực sự từ việc cho vay. Lãi suất của bảo tức tích luỹ ở Manulife tương đương lãi suất kỳ hạn 12 tháng ở một số ngân hàng. Chương trình máy tính của Manulife sẽ tính tiền lời của bảo tức tích luỹ của từng hợp đồng và cộng vào giá trị hợp đồng hàng ngày.
   <br>Prudential tính bảo tức mỗi năm dựa trên số tiền bảo hiểm, mà trong những năm đầu tiên thì tổng số tiền khách hàng đóng vào còn nhỏ hơn số tiền bảo hiểm nhiều nên số bảo tức đó không có thật ở những năm đầu, chỉ có thể nhận được ở tương lai khi hợp đồng đáo hạn.<br>
@@ -333,7 +329,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Tiền lời trong sản phẩm bảo hiểm nhân thọ kiểu <i>liên kết chung</i></h4>
+  <h2>Tiền lời trong sản phẩm bảo hiểm nhân thọ kiểu <i>liên kết chung</i></h2>
   <p>Những sản phẩm bảo hiểm nhân thọ kiểu <i><a href="bhnt-lien-ket-chung">liên kết chung</a></i> sẽ không có bảo tức chia hàng năm, thay vào đó khách hàng có một tài khoản như tài khoản ở ngân hàng, mỗi tháng lãi trên số dư tài khoản sẽ được nhập vào gốc, đồng thời một phần tiền từ tài khoản được trích ra để góp quỹ bảo hiểm rủi ro. Lãi suất cũng tương đương lãi suất tiền gửi kỳ hạn 12 tháng ở một số ngân hàng. Số tiền trích cho bảo hiểm rủi ro tỉ lệ với số tiền bảo hiểm mà khách hàng yêu cầu. Khi khách hàng đóng phí vào, một phần được trích cho chi phí của công ty bảo hiểm gọi là <i>phí ban đầu</i>, phần còn lại được cộng vào số dư tài khoản. Cũng như sản phẩm bảo hiểm truyền thống, phí ban đầu giảm dần theo tuổi của hợp đồng. Loại sản phẩm liên kết chung này có ưu điểm là khách hàng có thể yêu cầu số tiền bảo hiểm rất cao so với phí đóng hàng năm, có thể rút tiền từ tài khoản. Khách hàng có thể quyết định tỉ lệ của phần thứ nhất trong tổng phí đóng vào, tỉ lệ càng lớn thì lợi nhuận càng cao, có khi cao hơn gửi tiết kiệm ở ngân hàng.</p>
   <p>Mặc dù chi phí ở bảo hiểm nhân thọ cao hơn chi phí ở ngân hàng một chút nhưng đối với nhiều người để dành tiền dài hạn bằng bảo hiểm nhân thọ chắc chắn có kết quả tốt hơn để dành tiền ở ngân hàng. Lý do:</p>
   <ol>
