--- a/huu-ich/dau-tu-co-phieu/index.html
+++ b/huu-ich/dau-tu-co-phieu/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Đầu tư cổ phiếu (Trang web LHBội)</title>
+<title>Đầu-tư cổ-phiếu</title>
 <meta name="description" content="Phương pháp bình quân giá cổ phiếu: Đầu tư cổ phiếu đều đặn sẽ có kết quả tốt" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, đầu tư, cổ phiếu, DCA, bình quân">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Đầu tư cổ phiếu</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/huu-ich/dau-tu-co-phieu/
     </amp-facebook-like>
   </div>
 
+    <h1>Đầu-tư cổ-phiếu</h1>
   <p>Trong bài <a href="../de-tien-vao-dau">Để tiền vào đâu</a>, tôi có viết rằng đầu tư vào cổ phiếu có thể mang lại lợi nhuận cao hơn gửi tiết kiệm ở ngân hàng. Vậy ai và khi nào có thể đầu tư vào cổ phiếu?
   <br>Có hai trường hợp đầu tư vào cổ phiếu:</p>
   <ol>
@@ -279,11 +274,11 @@ data-ad-slot="3830899615">
   <p>Tôi là người rất tin tưởng vào ưu điểm của DCA. Tôi thường khuyên những người muốn chuyển tài sản từ tiền sang quỹ đầu tư hãy dùng DCA (trừ khi họ tự tin rằng mình nắm rõ được thị trường). Đặc biệt, nếu bạn vừa nhận được một khoản thừa kế làm tăng tài sản của bạn thêm 50%, bạn nên dùng DCA thay vì đưa hết tất cả vào quỹ đầu tư một lần. Nếu bạn có một số tiền lớn và bạn thật sự muốn đưa vào thị trường cổ phiếu nhưng bạn cảm thấy e ngại vì giá đang quá cao thì bạn nên dùng DCA trong 12 tháng thay vì chờ giá xuống.
   <br>Tuy nhiên tôi thấy rằng dùng DCA dài hơn 12 tháng lại là một chiến lược dở. DCA trong một giai đoạn ngắn như là 6 tháng có thể tốt; việc lựa chọn độ dài tuỳ theo mức độ chấp nhận rủi ro và mong muốn lợi nhuận của từng người (6 tháng thì có hơi rủi ro hơn và cũng có thể mang lại lợi nhuận cao hơn về sau).
   <br>Tôi so sánh hai chiến lược: LUMP-SUM, bạn đưa ngay một số tiền lớn vào quỹ đầu tư cổ phiếu và DCA-N, bạn đưa 1/N của số tiền vào đầu mỗi tháng vào thị trường cổ phiếu trong N tháng. Tôi dùng số liệu thực trong lịch sử để kiểm chứng kết luận và tôi trình bày bản phân tích đầy đủ về DCA-6, DCA-12, DCA-18, DCA-24 và DCA-36 trong phần phụ lục.</p>
-  <h4>Lý luận</h4>
+  <h2>Lý luận</h2>
   <p>DCA không dành cho những người tự tin là biết chọn thời điểm đầu tư. Người biết chọn thời điểm sẽ đưa ngay một số tiền lớn vào thị trường cổ phiếu vào lúc mà họ đánh giá rằng thị trường sắp đi lên. Và họ rút tiền ra khi họ đánh giá thị trường có vẻ sắp đi xuống. DCA dành cho những người sợ rằng thị trường sẽ sụt xuống bất kỳ lúc nào, nhưng không cảm thấy chắc chắn về sự đánh giá của mình.
   <br>Tôi cảm thấy mục đích của DCA là để tránh thiệt hại vì sự sụt giảm mạnh xảy ra sau khi đưa một đống tiền vào. DCA 6 tháng sẽ tốt nếu thị trường đi xuống trong 2-3 tháng đầu, bởi vì một nửa số tiền sẽ được dùng đầu tư khi giá thấp. Nhưng DCA-6 sẽ không hiệu quả khi giá xuống vào khoảng tháng thứ 5-6. DCA-12 cho kết quả tốt khi giá xuống vào khoảng tháng thứ 7-8. Cảm giác của tôi là, ngoại trừ điều trên, thì không có vấn đề gì lớn với DCA vì giả sử giá không xuống trong 8 tháng thì thị trường tăng giá đủ để cho kết quả cuối cùng là lời.
   <br>Thêm một điểm nữa là, nếu bạn dùng DCA-24 vào một thời điểm nào đó và thành công, nghĩa là thị trường xuống đáng kể trong 6 tháng đầu, thì khoản lỗ khó được bù lại trong 6 tháng kế. Nhưng như vậy thì một nửa sau của số tiền được đưa vào khi thị trường đã lên cao. Nghĩa là cuộc giải phẫu thành công nhưng bệnh nhân lại chết. Sự thận trọng của bạn là đúng nhưng bạn vẫn lỗ. Như vậy, một cách hợp lý thì DCA không nên dài đến 2-3 năm, thậm chí không nên đến 18 tháng. Thời gian DCA 6-12 tháng có vẻ tốt nhất.</p>
-  <h4>Lịch sử ủng hộ DCA-6 hơn DCA-36</h4>
+  <h2>Lịch sử ủng hộ DCA-6 hơn DCA-36</h2>
   <p>Tất cả những điều trên chỉ là lý thuyết, ý kiến chủ quan dựa trên khái niệm mơ hồ về thị trường cổ phiếu. Cần dùng số liệu lịch sử để thấy các khoảng thời gian khác nhau sẽ cho kết quả như thế nào. Để làm như vậy, tôi định nghĩa một quy trình đầu tư rõ ràng. Ví dụ tôi thực hiện DCA-12 như sau: đưa 1/12 số tiền vào thị trường cổ phiếu trong ngày đầu tiên của tháng đầu tiên, phần còn lại để trong thị trường tiền tệ. Một tháng sau, đưa 1/11 số tiền trong thị trường tiền tệ vào thị trường cổ phiếu, cứ như vậy suốt 12 tháng.
   <br>Một cách tương tự: Chia số tiền ban đầu thành N phần bằng nhau. Đưa phần đầu tiên vào thị trường cổ phiếu. Để phần thứ hai trong thị trường tiền tệ một tháng rồi mới đưa nó và lãi của nó sang thị trường cổ phiếu. Để phần thứ ba trong thị trường tiền tệ hai tháng rồi mới đưa nó và lãi của nó sang thị trường cổ phiếu… Như vậy lượng tiền được đưa vào thị trường cổ phiếu tăng đều về số tiền, nhưng chúng bằng nhau khi quy về thời điểm ban đầu (time-value-adjusted).
   <br>Câu hỏi: Làm thế nào để đo độ rủi ro mà chúng ta muốn chống đỡ bằng DCA? Tôi hình dung rằng điều cần phải tránh nhất là đưa hết một cục tiền vào thị trường cổ phiếu rồi vài tháng sau thấy rằng giá trị của nó bị giảm. Đương nhiên, khi chúng ta đưa 10.000$ một lúc vào TTCK, chúng ta hy vọng nó sẽ trở thành 11.000$ hay 12.000$ sau một năm. Nếu chỉ được có 10.500$ thì cũng không quá tệ; chúng ta có thể có kết quả tương đương khi để trong thị trường tiền tệ. Nếu cuối cùng vẫn chỉ có 10.000$ thì thật thất vọng và đáng giận, nhưng chúng ta đã biết rằng đầu tư cổ phiếu không phải chắc chắn có lời. Lo sợ, thất vọng, giận dữ, và hối tiếc xảy ra khi chúng ta có được ít hơn con số ban đầu.</p>
@@ -361,7 +356,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Kết luận</h4>
+  <h2>Kết luận</h2>
   <p>DCA-6 giúp đáng kể trong việc tránh lỗ khi đưa ngay một cục tiền vào TTCK rồi lỗ mất hơn 10% trong 6 tháng, có một chi phí nhỏ là 1,11%. Tuy nhiên chỉ có 15 trường hợp DCA-6 tốt hơn từ 10% trở lên so với cách đưa ngay một cục tiền, và trường hợp tốt nhất chỉ hơn 19,9%, bạn đã phải trả 1,11% chi phí để bảo vệ trong 3% số trường hợp. Kết quả không thật xuất sắc.</p>
   <p>Trong trường hợp DCA-12 thì khá hơn. Cách đưa ngay một cục tiền lỗ trong 114 trường hợp và DCA-12 khá hơn cách đưa ngay một cục tiền trong 100/114 trường hợp, 64 lần khá hơn 5%, một số lần còn hơn 20%.
   <br>Có 40 lần cách đưa ngay một cục tiền lỗ hơn 10%, DCA-12 khá hơn 39/40 trường hợp. Một nhược điểm là dùng DCA-12 tốn trung bình 2,5%, nghĩa là bạn sẽ bớt lỗ khi cách đưa ngay một cục tiền bị lỗ và bớt lời khi cách đưa ngay một cục tiền được lời. Đó chính là mục đích của DCA.</p>
