--- a/huu-ich/dau-tu-co-phieu/maxx-pltv-2.html
+++ b/huu-ich/dau-tu-co-phieu/maxx-pltv-2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Maxx - Phúc Lộc Thịnh Vượng (2) (Trang web LHBội)</title>
+<title>Maxx - Phúc Lộc Thịnh Vượng (2)</title>
 <meta name="description" content="Trang 2: Quỹ đầu tư Maxx - Phúc Lộc Thịnh Vượng, bảo hiểm nhân thọ sinh lời cao trong dài hạn" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/maxx-pltv-2">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Maxx - Phúc Lộc Thịnh Vượng (2)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,12 +230,13 @@ https://lehboi.github.io/huu-ich/dau-tu-co-phieu/maxx-pltv
     </amp-facebook-like>
   </div>
 
-  <h3>Dùng Maxx - PLTV như thế nào?</h3>
-  <h4>Để tích luỹ tiền hàng tháng</h4>
+  <h1>Maxx - Phúc Lộc Thịnh Vượng (2)</h1>
+  <h2>Dùng Maxx - PLTV như thế nào?</h2>
+  <h3>Để tích luỹ tiền hàng tháng</h3>
   <p>Khách hàng sẽ <a href="../ke-hoach-tai-chinh/">dự tính</a> số tiền mình sẽ đầu tư lâu dài và liên tục hàng tháng là bao nhiêu. Từ con số, đó tư vấn viên sẽ giúp khách hàng chọn một mức cam kết đầu tư tối thiểu hàng tháng, khoảng ⅙ đến ⅓ số trên, không nhỏ hơn một triệu đồng. Khi ký hợp đồng, khách hàng sẽ được bảo hiểm tử vong khoảng 100 lần mức cam kết hàng tháng đó.
   <br>Hàng tháng khách hàng đóng vào số tiền cam kết đầu tư tối thiểu và đóng thêm (nếu có). Mỗi năm, khách hàng có thể đóng thêm gấp 10 lần số tiền cam kết đầu tư tối thiểu hàng năm, khách hàng nên chia số tiền đóng thêm ra nhiều đợt, đóng cách nhau đều đặn theo phương pháp <a href="../dau-tu-co-phieu/">bình quân giá cổ phiếu</a>. Toàn bộ tiền đóng thêm sẽ được đổi thành đơn vị quỹ. Để lợi nhuận sinh ra bù lại những khoản phí quản lý hợp đồng thì khách hàng nên đóng thêm phí để cho số dư tài khoản trong năm đầu lớn hơn 5 triệu đồng.
   <br>Khách hàng có thể yêu cầu tăng/giảm số tiền cam kết đầu tư tối thiểu hàng tháng tuỳ theo tình hình tài chính gia đình, có thể tạm ngưng đóng tiền mà vẫn được bảo hiểm và nhận lợi nhuận.</p>
-  <h4>Chuyển <i>một phần</i> tiền từ tiết kiệm ở ngân hàng sang Maxx - PLTV</h4>
+  <h3>Chuyển <i>một phần</i> tiền từ tiết kiệm ở ngân hàng sang Maxx - PLTV</h3>
   <p>Số tiền cần chuyển sang Maxx - PLTV được chia làm 15-18 phần bằng nhau; 11 phần được đưa vào quỹ Maxx - PLTV trong 6 tháng liên tiếp theo kiểu <a href="../dau-tu-co-phieu/">DCA</a>, số còn lại được giữ ở ngân hàng để rút dần hàng tháng chuyển vào Maxx - PLTV trong năm thứ hai.</p>
   <p>Tuỳ theo thời gian đầu tư, khách hàng có thể yêu cầu chuyển tiền giữa 3 quỹ. Khi thời gian nhiều hơn 5 năm thì để tiền vào quỹ Tăng Trưởng, khi thời gian ít hơn 5 năm và giá cổ phiếu không tăng hoặc giảm thì chuyển tiền vào quỹ Cân Bằng.</p>
   <p>Mọi giao dịch với quỹ Maxx - Phúc Lộc Thịnh Vượng rất thuận tiện cho khách hàng, phần lớn được thực hiện tại địa điểm và theo thời gian của khách hàng.</p>
@@ -271,7 +266,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h4>Tóm lại</h4>
+  <h3>Tóm lại</h3>
   <p>Dùng Maxx - PLTV có những lợi điểm:</p>
   <ul>
     <li>không cần nhiều tiền, mỗi tháng gửi một triệu đồng là được rồi</li>
