--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -154,6 +154,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </script>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -225,15 +226,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Sổ tiết kiệm hay Quỹ đầu tư?</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -252,6 +246,7 @@ https://lehboi.github.io/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu
   </div>
 
 <!-- body here -->
+  <h1>Sổ tiết kiệm hay Quỹ đầu tư?</h1>
   <p>Giả sử bạn bắt đầu để dành tiền cho tương lai gia đình theo kế hoạch dài hạn được lập bằng <a href="../ke-hoach-tai-chinh/">KHTC</a>, bạn sẽ giữ tiền bằng cách nào?
   <br>Cách chắc chắn nhất để thực hiện kế hoạch hàng tỉ đồng là <a href="../cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia">để dành đều đặn mỗi tháng</a>. Với việc tích luỹ dần như vậy thì bạn có hai phương tiện:</p>
   <ol>
@@ -286,7 +281,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h1>Kết quả thực tế</h1>
+  <h2>Kết quả thực tế</h2>
   <p>Trong bài này, tôi sẽ so sánh kết quả giữa hai phương tiện trên bằng những tính toán trên những số liệu thực tế trong một thời gian dài hơn 12 năm.
   <br>Thời điểm bắt đầu tính là đầu năm 2009. Từ ngày đó đến ngày 
 19/08/2021
@@ -375,7 +370,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h1>Lợi ích trong tương lai xa</h1>
+  <h2>Lợi ích trong tương lai xa</h2>
   <p>Các con số lãi suất ở trên là lãi kép nên thời gian càng dài thì kết quả càng lớn. Ví dụ với lãi suất như trên, gửi mỗi 4 tuần 1 triệu đồng sau 30 năm sẽ từ 390 triệu đồng:</p>
   <span class="red">
   <ul>
@@ -393,7 +388,7 @@ data-ad-slot="3830899615">
     <li>1,587 triệu đồng mỗi tháng và tăng dần 5% sau mỗi năm, nếu lợi nhuận trung bình 10%/năm như gửi quỹ đầu tư</li>
   </ul>
 
-  <h1>Tại sao quỹ đầu tư cho lời cao hơn ngân hàng?</h1>
+  <h2>Tại sao quỹ đầu tư cho lời cao hơn ngân hàng?</h2>
   <p>Quỹ đầu tư là gì mà nó sinh lời nhiều hơn gửi tiết kiệm ở ngân hàng?
   <br>Mời bạn xem bài giải thích về <a href="quy-dau-tu">quỹ đầu tư</a>.</p>
 
