--- a/huu-ich/dau-tu-co-phieu/maxx-pltv.html
+++ b/huu-ich/dau-tu-co-phieu/maxx-pltv.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Maxx - Phúc Lộc Thịnh Vượng (Trang web LHBội)</title>
+<title>Maxx - Phúc Lộc Thịnh Vượng</title>
 <meta name="description" content="Quỹ đầu tư Maxx - Phúc Lộc Thịnh Vượng, bảo hiểm nhân thọ sinh lời cao trong dài hạn" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/maxx-pltv">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Maxx - Phúc Lộc Thịnh Vượng</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/huu-ich/dau-tu-co-phieu/maxx-pltv
     </amp-facebook-like>
   </div>
 
+    <h1>Maxx - Phúc Lộc Thịnh Vượng</h1>
   <p>Từ Tháng 10 năm 2017, Maxx - Phúc Lộc Thịnh Vượng đã được thay thế bằng một sản phẩm tốt hơn là <a href="../cac-loai-bao-hiem/diem-tua-dau-tu">Điểm Tựa Đầu Tư</a></p>
 <!-- AMP In-article 1 -->
 <amp-ad
