--- a/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Quỹ đầu tư</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,8 @@ https://lehboi.github.io/huu-ich/dau-tu-co-phieu/quy-dau-tu
     </amp-facebook-like>
   </div>
 
-  <h1>Quỹ đầu tư là gì?</h1>
+  <h1>Quỹ đầu tư</h1>
+  <h2>Quỹ đầu tư là gì?</h2>
   <p>Để trả lời cho câu hỏi đó thì phải tìm hiểu một vài khái niệm kinh tế tài chính là <i>trái phiếu, cổ phiếu, thị trường chứng khoán</i>.</p>
   <p><a href="http://vi.wikipedia.org/wiki/Trái_phiếu" target="_blank">Trái phiếu</a> là giấy xác nhận nợ. Khi ta sở hữu trái phiếu thì ta có quyền nhận lại tiền vốn và lãi từ bên vay nợ. Lãi suất của trái phiếu được qui định rõ, có thể là lãi suất cố định suốt thời hạn trái phiếu, hoặc thay đổi theo một số tham chiếu nào đó.
   <br>Bên vay nợ hay là bên phát hành trái phiếu có thể là chính phủ trung ương, chính quyền địa phương, doanh nghiệp. Thời hạn của trái phiếu từ 1 năm đến hơn 5 năm.
@@ -304,7 +299,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h1>Phân loại</h1>
+  <h2>Phân loại</h2>
   <p>Theo hình thức hoạt động thì có thể chia làm hai dạng: quỹ đóng và <a href="http://vi.wikipedia.org/wiki/Quỹ_đầu_tư_mở" target="_blank">quỹ mở</a>.</p>
   <table class="withborder">
   <tbody>
@@ -404,7 +399,7 @@ data-ad-slot="3830899615">
     <li>Ban đại diện quỹ do các nhà đầu tư bầu lên sẽ theo dõi hoạt động của công ty quản lý quỹ</li>
     <li>Công ty kiểm toán độc lập sẽ định kỳ kiểm tra sổ sách của công ty quản lý quỹ</li>
   </ol>
-  <h1>Mức độ rủi ro</h1>
+  <h2>Mức độ rủi ro</h2>
   <p>Quỹ đầu tư vào cổ phiếu có bị lỗ giống như những người <i>chơi</i> cổ phiếu không?
   <br>Bạn có thể xem lý do thua lỗ khi <i>chơi</i> cổ phiếu trong bài <a href="../de-tien-vao-dau">Để tiền vào đâu</a>.</p>
   <p>Quỹ đầu tư không dùng vốn vay nên không bị rơi vào vòng xoáy lỗ sạch vốn như đầu cơ cổ phiếu (xem <a href="../cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>).</p>
