--- a/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc.html
+++ b/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,14 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
   <div class="body">
-    <div class="title">Làm gì khi thị trường xuống dốc?</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +231,7 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
+  <h1>Làm gì khi thị trường xuống dốc?</h1>
   <p>Dịch từ bài <a href="https://twocents.lifehacker.com/how-to-prevent-market-dips-from-tanking-your-retirement-1831617500" target='_blank'>Làm cách nào để ngăn chặn ảnh hưởng đến quỹ hưu trí của bạn khi thị trường cổ phiếu xuống đáy</a>.</p>
   <p>(Đa số người Mỹ <a href="../tich-luy">tích luỹ</a> tiền để dùng khi về hưu trong các <a href="quy-dau-tu">quỹ đầu tư</a> cổ phiếu. Bài này viết về ảnh hưởng của thị trường cổ phiếu đến quỹ hưu của người dân.)</p>
   <div class="flright"><amp-img alt="Thị trường lên xuống" src="/images/MarketDown.png" width="769" height="518" layout="responsive"></amp-img></a></div>
